created Weather Database

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -86,7 +86,7 @@
     "    # If the city is unique, then we will add it to the cities list.\n",
     "    if city not in cities:\n",
     "        cities.append(city)\n",
-    "Print the city count to confirm sufficient count.\n",
+    "# Print the city count to confirm sufficient count.\n",
     "len(cities)"
    ]
   },
@@ -142,11 +142,11 @@
    "source": [
     "# Create an empty list to hold the weather data.\n",
     "city_data = []\n",
-    "Print the beginning of the logging.\n",
+    "# Print the beginning of the logging.\n",
     "print(\"Beginning Data Retrieval     \")\n",
     "print(\"-----------------------------\")\n",
     "\n",
-    "Create counters.\n",
+    "# Create counters.\n",
     "record_count = 1\n",
     "set_count = 1"
    ]
