--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4          97        1.99     overcast clouds  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,17 +920,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Recall output file,i.e. re-use.\n",
-    "# clean_hotel_df = pd.read_csv(\"WeatherPy_vacation.csv\")"
+    "clean_hotel_df = pd.read_csv(\"WeatherPy_vacation.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,13 +953,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33d3df3da0314620909ff85cfdb376af",
+       "model_id": "b6e0e68891e24c998985522b768e57bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -973,7 +973,6 @@
    ],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
     "\n",
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "\n",
